--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 		<meta charset="utf-8">
 		<title>Corona - Michi Doméstico</title>
 	</head>
-
+	<!--🤔🤔🤔🤔🤔🤔🤔 ¿Soy yo o corona hizo devuelta el cv igual que en 2020?!-->
+	<!--señor corona, queremos ver un CV orishinal🐈-->
 	<body> <!-- dentro de esta etiqueta va todo nuestro código -->
 		<header> <!-- en header en general ponemos información que va en la parte superior de la web y que se repite constantemente en el caso de que tuviésemos varios html, es nuestra información constante -->
 			<img src="../Muestra CV Corona clase 1/muestra_cv_corona/img/corona-fotoperfil.png" width="300px" height="300px" alt="Mi foto de perfil" id="foto-perfil">
